fix: ads visible even with adblockers, filters on page "Agenda", layout issues on EventPage and OrganizationPage (no max-widths), responsive issues on IOS, Safari etc with the "full-bleed" class

--- a/src/styles/utility.css
+++ b/src/styles/utility.css
@@ -66,6 +66,12 @@
     z-index: -1;
   }
 }
+.full-bleed {
+  width: 100vw;
+  position: relative;
+  left: 50%;
+  margin-left: -50vw;
+}
 
 /* Skew border */
 .skew-border-after,
